--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
 
@@ -456,13 +456,13 @@
                         </li>
                         <li>
                             <div class="row">
-                                <div class="col-sm-2">
+                              <!-- <div class="col-sm-2">
                                     <span>2015-2018</span>
                                     <a href="http://www.topuniversities.com/university-rankings/world-university-rankings/2014" target="_blank" class="rank">Ranked #5 <br> in the World</a>
                                 </div>
                                 <div class="col-sm-10">
-                                    <h3>Got the offer from UCL and CVUT Prague. Help me <strong>gain more experience before my studies start</strong>.</h3>
-                                    <div class="row">
+                                    <h3>Got the offer from UCL and CVUT Prague. Help me <strong>gain more experience before my studies start</strong>.</h3> -->
+                                    <!--<div class="row"> 
                                         <div class="col-sm-6">
                                             <a href="http://www.ucl.ac.uk/" target="_blank">
                                                 <img src="assets/img/ucl.png" alt="University College London" />
@@ -477,7 +477,7 @@
                                                 <strong>Software Engineering and Technologies</strong>
                                             </a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </li>
@@ -495,7 +495,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xs-12 col-sm-10 col-md-5 centered">
-                                <img src="assets/img/marek-dlugos-2.png" alt="Marek Dlugos" class="me" />
+                                <img src="assets/img/marek-dlugos-2.png" alt="Aditya Sood" class="me" />
                                 <ul class="social">
                                     <li><a href="http://www.facebook.com/workingtogetherforchange" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></li>
                                     <li><a href="http://www.twitter.com/adtyasood6" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
@@ -504,15 +504,15 @@
                                     <li><a href="skype:libra4po" target="_blank"><i class="fa fa-skype fa-2x"></i></a></li>
                                 </ul>
                                 <h3>Or just shoot me an e-mail to connect</h3>
-                                <a href="mailto:marek@hostmeinca.com?subject=Hey%20Marek,%20This%20is%20your%20lucky%20day!" target="_blank" class="btn">
-                                    <span>Let my dream come true &amp; write me an e-mail</span>
-                                    <strong>marek@hostmeinca.com</strong>
+                                <a href="mailto:aditya.sood2@gmail.com?subject=Hey%20Aditya,%20This%20is%20your%20lucky%20day!" target="_blank" class="btn">
+                                   <span>Let my dream come true &amp; write me an e-mail</span>
+                                    <strong>aditya.sood2@gmail.com</strong>
                                 </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-6">
-                                <p class="left">I have done this site <strong>during one week, instead of learning for my leaving exams and partying with my friends</strong>. I hope it is gonna be worth it! </p>
+                                <p class="left">I have done this site <strong>during one week, instead of studying for my economics exams and partying with my friends</strong>. I hope it's worth it! </p>
                             </div>
                             <div class="col-xs-12 col-sm-6">
                                 <p class="right">Or help me by sharing my dream on facebook or twitter.</p>
